--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
-/ParticleMethod/data
+/ParticleMethod/data_plot/
+/x64/Debug/data_plot/
 ### C++ template
 # Prerequisites
 *.d
