--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
-/ParticleMethod/data_plot/*csv
-/x64/Debug/data_plot/*csv
+/ParticleMethod/data_plot/*.csv
+/x64/Debug/data_plot/*.csv
 .idea/
 ### C++ template
 # Prerequisites
